-
Bug
-
Resolution: Fixed
-
Trivial
-
Lustre 2.14.0, Lustre 2.12.5
-
None
-
3
-
9223372036854775807
Since merge of LU-11510, lfs migrate on a non-existing file will give the following error "lfs migrate: can't create composite layout from file /some/path/to/file" and will exit with code 0, potentially leaving a calling script unaware of the error.
The non-existing file is caught earlier than before by the call to llapi_layout_get_by_path() in lfs_setstripe_internal(), which does not return error code.
However, it sets errno in case of failure, but this is not used by the caller, which gets out without setting the exit code.