lustre/utils/lfs.c
@@ -4041,8 +4041,10 @@ static int lfs_setstripe_internal(int argc, char **argv,
 			layout = llapi_layout_get_by_path(template ?: fname, 0);
 			if (!layout) {
 				fprintf(stderr,
-					"%s: can't create composite layout from file %s.\n",
-					progname, template ?: fname);
+					"%s: can't create composite layout from file %s: %s\n",
+					progname, template ?: fname,
+					strerror(errno));
+				result = -errno;
 				goto error;
 			}
 		}
